@@ -1,3 +1,4 @@
+Added file i/o for message storing, see #3136
 # 00.00.46 (58158) Oct 31, 2011
 Added flavor for EventServer
 # 00.00.45 (58060) Oct 27, 2011
